...
import 'sample_data.dart';
import 'tables.dart';

part 'database.g.dart';

@DriftDatabase(tables: [
  Events,
  Dancers,
  Ranks,
  Rankings,
  Attendances,
  Tags,
  DancerTags,
  Scores
...
