...
        ),
        ProxyProvider2<AppDatabase, DancerCrudService, DancerTagService>(
          update: (_, db, crudService, __) => DancerTagService(db, crudService),
        ),
      ],
      child: MaterialApp(
        title: 'Dancer Ranking',
        theme: AppTheme.getLightTheme(appBarColor: appBarColor),
        darkTheme: AppTheme.getDarkTheme(appBarColor: appBarColor),
        home: (cliArgs.navigationPath != null || cliArgs.eventIndex != null)
            ? CliNavigator(cliArgs: cliArgs)
            : const HomeScreen(),
        debugShowCheckedModeBanner: false,
...
